<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spacemouse_publisher</name>
  <version>0.2.0</version>
  <description>This package provides a node that publishes the data from a 3Dconnexion SpaceMouse.</description>
  <maintainer email="niklas.schlueter@tum.de">Niklas Schlueter</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>libhidapi-hidraw0</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
